--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ dependencies {
     //hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    implementation 'androidx.test:runner:1.4.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.4'
+    implementation 'androidx.test:runner:1.5.1'
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
 
@@ -72,7 +72,7 @@ dependencies {
 
     //picasso
 //    implementation "com.squareup.picasso:picasso:$picasso"
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
@@ -97,14 +97,19 @@ dependencies {
 
 
     //Testing
-    testImplementation 'org.mockito:mockito-core:2.11.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version"
+    testImplementation 'org.mockito:mockito-core:3.0.0'
     testImplementation 'android.arch.core:core-testing:1.1.1'
-    testImplementation "com.google.truth:truth:1.1"
+    testImplementation "com.google.truth:truth:1.1.3"
 // For Robolectric tests.
-    testImplementation("com.google.dagger:hilt-android-testing:2.28-alpha")
+    testImplementation "com.google.dagger:hilt-android-testing:2.37"
 // For instrumented tests.
-    androidTestImplementation("com.google.dagger:hilt-android-testing:2.28-alpha")
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.37"
 // ...with Kotlin.
-    kaptTest("com.google.dagger:hilt-android-compiler:2.40.5")
+    kaptTest "com.google.dagger:hilt-android-compiler:2.40.5"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'}
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+}
