--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
     ext.material_version = "1.7.0"
     ext.core_ktx_version = "1.9.0"
     ext.retrofit_version = "2.9.0"
-    ext.moshi_version = "1.8.0"
-    ext.okhttp3_version = "4.9.1"
+    ext.moshi_version = "1.12.0"
+    ext.okhttp3_version = "5.0.0-alpha.2"
     ext.lifecycle_version = "2.5.1"
     ext.appcompat_version = "1.5.1"
     ext.constraintlayout_version = "2.1.4"
@@ -25,13 +25,12 @@ buildscript {
     ext.coroutines_retrofit2_adapter_version = "0.9.2"
     ext.retrofit2_converte_gson_version = "2.9.0"
     ext.junit_version = "4.13.2"
-    ext.ext_junit_version = "1.1.3"
-    ext.espresso_version = "3.4.0"
+    ext.ext_junit_version = "1.1.4"
+    ext.espresso_version = "3.5.0"
 
     repositories {
         google()
         mavenCentral()
-        jcenter()
         maven { url 'https://jitpack.io' }
 
     }
@@ -50,7 +49,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()
         maven { url "https://jitpack.io" }
     }
 }
